# rgen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gitmodules
examples/cmake/simple-example/: CMakeLists.txt  main.cpp
examples/cmake/simple-example/mylib/: CMakeLists.txt  enum.h
export/: CMakeLists.txt
export/cmake/: JSONParser.cmake  get_cc.py  rgen.cmake
export/include/rgen/common/: comparison.h  export_macro.h  hash_combine.h  link_error_helper.h
export/libs/rgen_json_qt/: CMakeLists.txt
export/src/: jsonlib_qt.cpp
src/: CMakeLists.txt
src/cmake/: install.cmake  rgen_internal.cmake
src/core/: CMakeLists.txt  asthelper.cpp  asthelper.h  command_line_args.h  comment.cpp  comment.h  common_constants.h  derive_convert.cpp  derive_convert.h  derive_data.h  doxygen_constants.h  extracteddata.h  file.cpp  file.h  inheritance.cpp  inheritance.h  logger.cpp  logger.h  ppcallbacks.cpp  ppcallbacks.h  registry.cpp  registry.h  string_util.cpp  string_util.h  template_loader.h  utils.cpp  utils.h  visitor.h
src/modules/: CMakeLists.txt
src/modules/_test_utils/fakeInclude/rcore/: metaregistration.h  serializeutils.h
src/modules/custom_module/: CMakeLists.txt  Readme.md  api.h  converter.cpp  data.cpp  data.h  printer.cpp  register.cpp
src/modules/derive/: CMakeLists.txt  Readme.md  api.h  converter.cpp  data.h  registry.cpp
src/modules/derive/export_includes/: derive.h
src/modules/derive/test/: CMakeLists.txt  main.cpp  test_operator.h
src/modules/enum/: CMakeLists.txt  Readme.md  api.h  converter.cpp  data.h  printer.cpp  registry.cpp
src/modules/enum/export_includes/: enum.h
src/modules/enum/template/: enum.cxx.j2
src/modules/enum/test/: custom_names.h  main.cpp  misc_enum_places.h
src/modules/hasher/: CMakeLists.txt  Readme.md  api.h  converter.cpp  printer.cpp  register.cpp
src/modules/hasher/export_includes/: hasher.h
src/modules/hasher/template/: hasher.hxx.j2
src/modules/hasher/test/: main.cpp  test_operator.h
src/modules/json/: CMakeLists.txt  Readme.md  api.h  converter.cpp  data.h  printer.cpp  register.cpp
src/modules/json/export_includes/: json_cpp.h  json_qt.h  jsonserializer_cpp.h  jsonserializer_qt.h
src/modules/json/export_includes/private/: json_post.h  json_pre.h  json_serializer_v2.h  jsonlib_declare.h  jsonlib_qt.h  jsonlib_std.h
src/modules/json/template/: json.cxx.j2  json.hxx.j2
src/modules/json/test/: CMakeLists.txt  json_myown.h  main.cpp  ownLib.h  structs.h
src/modules/json/test/externalLib/: CMakeLists.txt  extLib.cpp  extLib.h  extLib_global.h
src/modules/json_schema/: CMakeLists.txt  Readme.md  api.h  converter.cpp  data.h  printer.cpp  register.cpp
src/modules/json_schema/export_includes/: json_schema.h
src/modules/json_schema/template/: json_schema.cxx.j2
src/modules/json_schema/test/: CMakeLists.txt  S_1.h  S_1_1.h  S_1_2.h  main.cpp
src/modules/operator_equals/: CMakeLists.txt  Readme.md  api.h  converter.cpp  printer.cpp  register.cpp
src/modules/operator_equals/export_includes/: operator_equals.h
src/modules/operator_equals/template/: operator_equals.cxx.j2
src/modules/operator_equals/test/: CMakeLists.txt  main.cpp  test_operator.h
src/modules/operator_less/: CMakeLists.txt  Readme.md  api.h  converter.cpp  printer.cpp  register.cpp
src/modules/operator_less/export_includes/: operator_less.h
src/modules/operator_less/template/: operator_less.cxx.j2
src/modules/operator_less/test/: main.cpp  test_struct.h
src/modules/operator_qstream/: CMakeLists.txt  Readme.md  api.h  converter.cpp  printer.cpp  register.cpp
src/modules/operator_qstream/export_includes/: operator_qstream.h
src/modules/operator_qstream/template/: operator_qstream.cxx.j2
src/modules/operator_qstream/test/: CMakeLists.txt  main.cpp  test_operator.h
src/modules/qhasher/: CMakeLists.txt  Readme.md  api.h  converter.cpp  printer.cpp  register.cpp
src/modules/qhasher/export_includes/: qhasher.h
src/modules/qhasher/template/: qhasher.cxx.j2
src/modules/qhasher/test/: CMakeLists.txt  main.cpp  test_operator.h
src/modules/qvariantmap_serializer/: CMakeLists.txt  api.h  converter.cpp  data.h  printer.cpp  register.cpp
src/modules/qvariantmap_serializer/export_includes/: qvariantmap_serializer.h
src/modules/qvariantmap_serializer/export_includes/private/: qvariantmap_lib.h  qvariantmap_post.h  qvariantmap_pre.h
src/modules/qvariantmap_serializer/template/: qvariantmap_serializer.cxx.j2
src/modules/qvariantmap_serializer/test/: CMakeLists.txt  main.cpp  qvariantmap_myown.h  structs.h
src/modules/qvariantmap_serializer/test/private/: ownLib.h
src/tests/: CMakeLists.txt
src/tests/doc_tests/: CMakeLists.txt  derive_test.h  enum_test.h  jsonschema_test.h  main.cpp
src/tests/functional/: CMakeLists.txt  comment_test.cpp  file_test.cpp  preprocessor_test.cpp  registry_test.cpp  standalone_test.cpp  string_util_test.cpp
src/tests/general_functionality/: CMakeLists.txt
src/tests/general_functionality/library_depends/: CMakeLists.txt  main.cpp
src/tests/general_functionality/library_depends/someLib/: CMakeLists.txt  liby.h  liby_global.h
src/tests/general_functionality/skip_transitive_headers/: CMakeLists.txt  enum_gen.h  enum_notgen.h  main.cpp
src/tests/inheritance_tests/: CMakeLists.txt  inheritance_tests.h  main.cpp
