add_subdirectory(derive)
add_subdirectory(hasher)
add_subdirectory(qhasher)
add_subdirectory(enum)
add_subdirectory(json)
add_subdirectory(qvariantmap_serializer)
add_subdirectory(json_schema)
add_subdirectory(operator_equals)
add_subdirectory(operator_qstream)
add_subdirectory(operator_less)
add_subdirectory(custom_module)
